--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 </head>
 <body>
 
+<div id="container">
+  <h1>To-Do List</h1>
+  <input type="text">
+
+  <ul>
+    <li><span>X</span> Go to Potions Class</li>
+    <li><span>X</span> Buy new robe</li>
+    <li><span>X</span> Eff Harry potter</li>
+  </ul>
+</div>
 <script type="text/javascript" src="assets/js/todos.js"></script>
 </body>
 </html>
