--- a/index.html
+++ b/index.html
@@ -3,18 +3,20 @@
 <head>
   <title>Todo List</title>
   <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto+Slab|Roboto:400,500,700' rel='stylesheet' type='text/css'>
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <script type="text/javascript" src="assets/js/lib/jquery-3.2.1.min.js"></script>
 </head>
 <body>
 
 <div id="container">
-  <h1>To-Do List</h1>
-  <input type="text">
+  <h1>To-Do List <i class="fa fa-plus" aria-hidden="true"></i></h1>
+  <input type="text" placeholder="Add new todo">
 
   <ul>
-    <li><span>X</span> Go to Potions Class</li>
-    <li><span>X</span> Buy new robe</li>
-    <li><span>X</span> Eff Harry potter</li>
+    <li><span><i class="fa fa-trash"></i></span> Go to Potions Class</li>
+    <li><span><i class="fa fa-trash"></i></span> Buy new robe</li>
+    <li><span><i class="fa fa-trash"></i></span> Eff Harry potter</li>
   </ul>
 </div>
 <script type="text/javascript" src="assets/js/todos.js"></script>
